Modernize AbstractLeader
Use List.of() and access first element only once.

Change-Id: I718f09a90e7c8c56362e0503c927ed5fdb842e34
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>